added the request list
