# api-service/api/controllers/requestController.js
@@ -5,7 +5,7 @@ const modelUtils = require('../../modelUtils.js');
 
 module.exports = {
     insertOrUpdateRequest: insertOrUpdateRequest,
-
+    getClubRequest: getClubRequest
 };
 
 function insertOrUpdateRequest(req, res) {
@@ -16,4 +16,15 @@ function insertOrUpdateRequest(req, res) {
     controllerUtils.applyTxAndHandleModelResponse(db, req, res, __filename, insertOrUpdateRequestFromDao);
 
 }
+
+function getClubRequest(req, res) {
+    let clubId = req.swagger.params.clubId.value;
+    let request = {clubId}
+    let getClubRequestFromDao = () => {
+        return requestDao.getClubRequest(request)
+    }
+    controllerUtils.applyTxAndHandleModelResponse(db, req, res, __filename, getClubRequestFromDao);
+
+}
+
 
