# api-service/dao/requestDao.js
@@ -5,6 +5,13 @@ const db = require('../db/dbConnection.js').get();
 const config = require('../config.js').getMessageConfig();
 const requestDbModel = require('../model/request.js').request;
 
+const CLUB_REQUEST_LIST = " SELECT RQ.id, rq.approved, C.NAME clubName, C.ID clubId, T.ID tournamentId, T.NAME tournamentName, " +
+    " T.LOGO logo, T.STARTDATE startDate, T.ENDDATE endDate, T.TEAMTOTAL teamTotal, T.MEMBERTOTAL memberTotal, CONCAT(U.FIRSTNAME, ' ', U.LASTNAME) playerName, RQ.TYPE type, UNIX_TIMESTAMP(RQ.CREATEDAT) * 1000 createdAt " +
+    " FROM REQUEST RQ " +
+    " INNER JOIN CLUB C ON C.ID = RQ.CLUBID " +
+    " INNER JOIN TOURNAMENT T ON T.ID = RQ.TOURNAMENTID " +
+    " INNER JOIN USER U ON U.ID = RQ.USERID "  +
+    " WHERE U.DELETEDAT IS NULL AND T.DELETEDAT IS NULL "
 
 const requestDao = new function () {
     this.insertOrUpdateRequest = function (data) {
@@ -14,6 +21,25 @@ const requestDao = new function () {
             return this.insertRequest(data)
         }
     }
+    this.getClubRequest = function (queryReplacement) {
+        let query = CLUB_REQUEST_LIST
+        if (queryReplacement.clubId) {
+            query += " AND C.Id = :clubId "
+        }
+        return db.query(query, {
+            replacements: queryReplacement,
+            type: db.QueryTypes.SELECT,
+            logging: console.log,
+        }).then((req) => {
+            if (req && req.length > 0) {
+                return req
+
+            } else {
+                return {}
+
+            }
+        })
+    }
     this.insertRequest = function (requestObj) {
         return requestDbModel.create(requestObj)
             .then((requestDetails) => {
@@ -21,12 +47,15 @@ const requestDao = new function () {
             })
     }
     this.updateRequest = function (requestObj) {
+        console.log(requestObj)
+
         return requestDbModel.update(requestObj, {
             where: {
                 'id': requestObj.id
             }
         }).then((requestDetails) => {
-            return requestDetails.get();
+            console.log(requestDetails)
+            return requestDetails;
         })
     }
 }
